Fix bluetooth service discovery not finishing on Android

The service discovery finished signal is not emitted when
the SDP cache is empty when last device inquiry of services finishes.

This commit changes the logic so that the the inquiry is finished
independent of whether actual services were discovered on (any) of
the devices.

As a related drive-by:
- Document the role of sdpCache to ease understanding
- Change raw timeout limits into a variable

Fixes: QTBUG-104479
Pick-to: 5.15 6.2 6.3 6.4
Change-Id: Ifc9e8587a66769a1fc7959a8154f2be72ffd7461
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>